# MIPT-Huawei-student-lab

./: intrinsics.cpp
AndreyDerzhavin/: README.md
AndreyDerzhavin/1a/: CMakeLists.txt  Makefile  main.cc  main_impr.cc  matrix.hh  matrix_imp.hh  mul.cl  mul.hh  mul_ocl.hh  mul_th.hh  ocl.cc
AndreyDerzhavin/1a/Matrix/: matrix.hh
AndreyDerzhavin/1a/OCL/: mul.cl  mul_ocl.cc  mul_ocl.hh  ocl.cc
AndreyDerzhavin/1a/Threads/: mul_th.hh
AndreyDerzhavin/1a/Timer/: Timer.hh
AndreyDerzhavin/1a/tst/tstgen/: gen.py
AndreyDerzhavin/2b/: Batch.hh  CMakeLists.txt  Makefile  Tensor.hh  main.cc
AndreyDerzhavin/2b/Just/: conv.hh
AndreyDerzhavin/2b/Linal/: Batch.hh  Kernel.hh  Tensor.hh  matrix.hh
AznaurAliev/1-b/: .gitignore  main.cpp  makefile  mat_mult.h  matrix.cpp  matrix.h
AznaurAliev/2-a/: main.cpp
FaridKhaidari/: .gitignore  CMakeLists.txt  Makefile  README.md  main.cc  matrix.hh  mul.hh
FaridKhaidari/1a_mul/: CMakeLists.txt  howto.txt  main.cc  mul.hh
FaridKhaidari/1a_mul/mul_funcs/: intr.hh  just.hh  mul.hh  opcl.cc  opcl.cl  opcl.hh  thrd.hh
FaridKhaidari/matrix/: matrix.hh  matrix_light.cc  matrix_light.hh
FaridKhaidari/mul_speed_tst/: mul_speed.cc
IvanSidorenko/: intrinsics.cpp  memcpy.cpp  memcpy_opt_O3.cpp
RavilZakirianov/: main.cpp  readme
RavilZakirianov/Conv/: Makefile  main  main.cpp  readme  tensor.cpp  tensor.hpp  test1.txt  test2.txt
RavilZakirianov/Matrix/: Makefile  Makefile-1  Makefile-2  main.cpp  main2.cpp  matrix.hpp  matrix_1.hpp  matrix_2.hpp  readme
VladislavLoznovenko/: text.txt
VladislavLoznovenko/task_conv/: Makefile  main.cpp  time.h
VladislavLoznovenko/task_conv/Chanel_h/: Chanel_h.cpp  Chanel_h.h
VladislavLoznovenko/task_conv/Convolutions_h/: Conv_GEMM.cpp  Conv_GEMM.h  Conv_Vinograd.cpp  Conv_Vinograd.h  Conv_fast.cpp  Conv_fast.h  Conv_naiv.cpp  Conv_naiv.h
VladislavLoznovenko/task_conv/Matrix_h/: Matrix_h.cpp  Matrix_h.h
VladislavLoznovenko/task_conv/Tensor4_h/: Tensor4.cpp  Tensor4.h
VladislavLoznovenko/task_convolution/: Makefile  main.cpp
VladislavLoznovenko/task_convolution/Chanel_h/: Chanel_h.cpp  Chanel_h.h
VladislavLoznovenko/task_convolution/Convolutions_h/: Conv_fast.cpp  Conv_fast.h  Conv_naiv.cpp  Conv_naiv.h
VladislavLoznovenko/task_convolution/Matrix_h/: Matrix_h.cpp  Matrix_h.h
VladislavLoznovenko/task_convolution/Tensor4_h/: Tensor4.cpp  Tensor4.h
VladislavLoznovenko/task_matrix/: Makefile  Matrix.h  Matrix_products.h  main.cpp  matrix_mult.cpp  matrix_mult.h  matrix_mult_true.cl
VladislavLoznovenko/task_matrix/Matrix_lib/: Matrix.cpp  Matrix.h
example/: a.out  int  int.cpp  temp  temp.cpp
